[package]
name = "ngc-block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.1.1", default-features = false }
num-traits = {version = "0.2.15",default-features = false,features = ["libm"]}
