[package]
name = "ngc-block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
lazy_static = { version = "1.4.0" ,optional = true}
nom = { version = "7.1.1", default-features = false ,optional = true}
num-traits = {version = "0.2.15",default-features = false,features = ["libm"]}

pest = { version = "2.7", default-features = false }
pest_derive = { version = "2.7", default-features = false }

[features]
std = ["nom/std","pest/std","pest_derive/std","lazy_static"]
no_std = ["nom/alloc", "lazy_static/spin_no_std"]
default = ["std"]
