[package]
name = "ngc-block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
lazy_static = { version = "1.4.0" ,optional = true}
num-traits = {version = "0.2.15",default-features = false,features = ["libm"]}

pest = { version = "2.7", default-features = false }
pest_derive = { version = "2.7", default-features = false }
thiserror = { version = "1.0.20", optional = true }
thiserror-no-std = { version = "2.0.2", optional = true }


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parse_gcode"
harness = false


[features]
std = ["thiserror","pest/std","pest_derive/std","lazy_static"]
no_std = ["lazy_static/spin_no_std","thiserror-no-std"]
default = ["std"]
